<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg_start" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        >

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:id="@+id/btn_start"
            android:layout_gravity="center_horizontal"
            style="@style/btn_background"
            android:layout_margin="3dp" />

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_define"
            android:id="@+id/btn_user_define"
            android:layout_gravity="center_horizontal"
            style="@style/btn_background"
            android:layout_margin="3dp" />

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_help"
            android:id="@+id/btn_help"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            style="@style/btn_background"
            android:layout_margin="3dp" />

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_history"
            android:id="@+id/btn_history"
            android:layout_gravity="center_horizontal"
            style="@style/btn_background"
            android:layout_margin="3dp" />

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:id="@+id/btn_exit"
            android:layout_gravity="center_horizontal"
            style="@style/btn_background"
            android:layout_margin="3dp" />
    </LinearLayout>
</RelativeLayout>
